Updated plotting to save running averages

--- a/Plotting.ipynb
+++ b/Plotting.ipynb
@@ -52,10 +52,11 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import os\n",
     "\n",
     "\n",
-    "path = \"agents/DQN-CnnPolicyLong\"\n",
+    "path = \"agents/gauss_3_21_3p4milsteps/best_model\"\n",
     "num_average = 50\n",
     "\n",
     "df = pd.read_csv(os.path.join(path, \"monitor.csv\"), names=[\"Reward\", \"Epoch length\", \"time\"], skiprows=[0, 1])\n",
@@ -67,6 +68,7 @@
     "plt.ylabel(\"Reward\")\n",
     "plt.legend()\n",
     "plt.savefig(os.path.join(path, \"rewards.png\"))\n",
+    "np.savetxt(os.path.join(path, \"reward_avg.txt\"),df['RewardAverage'])\n",
     "plt.show()\n",
     "plt.close()\n",
     "\n",
@@ -77,6 +79,7 @@
     "plt.ylabel(\"Epoch length\")\n",
     "plt.legend()\n",
     "plt.savefig(os.path.join(path, \"epoch length.png\"))\n",
+    "np.savetxt(os.path.join(path, \"epoch_length_avg.txt\"),df['EpochAverage'])\n",
     "plt.show()\n",
     "plt.close()"
    ]
@@ -92,7 +95,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -106,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
